Fix SVG path for GitHub Pages deployment

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -12,7 +12,7 @@
     <div class="absolute bottom-0 left-0 right-0" style="height: 75vh;"> <!-- Slightly reduced height -->
         <div class="relative h-full max-w-6xl mx-auto">
             <img 
-                src="/images/coil-system.svg" 
+                src="{{ "images/coil-system.svg" | relURL }}"
                 alt="Stellarator Coil System" 
                 class="absolute left-1/2 transform -translate-x-1/2 h-full object-contain"
                 style="max-height: 90%;"
